fix datepicker icon alignement

--- a/src/app/shared/material.scss
+++ b/src/app/shared/material.scss
@@ -134,13 +134,6 @@ mat-hint {
     inset-inline-end: 7px !important;
 }
 
-.mat-mdc-icon-button.mat-mdc-button-base {
-    --mdc-icon-button-state-layer-size: 35px !important;
-    margin-top: -14px !important;
-    margin-inline-end: 5px !important;
-}
-
-
 mat-error {
     font-size: 10px !important;
     margin-top: -3px !important;
